<resources>
    <string name="app_name">AppTrainning</string>
    <string name="edt_username">User name</string>
    <string name="edt_password">Password</string>
    <string name="empty_username">Please enter User name</string>
    <string name="empty_password">Please enter Password</string>
    <string name="clock_in_out">Clock In And Clock Out</string>
    <string name="clock_in">CLOCK IN</string>
    <string name="clock_out">CLOCK OUT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_item_1">Clock In/Clock Out</string>
    <string name="nav_item_2">Badge</string>
    <string name="nav_item_3">Logout</string>
    <string name="search">search</string>
    <string name="login">Đang kết nối !</string>
    <string name="logout">Đang đăng xuất !</string>
    <string name="ok">Ok</string>
    <string name="eror">Đăng nhập thất bại !</string>
    <string name="str_blank"></string>
    <string name="message_clock_in">Message Clock In</string>
    <string name="message_clock_out">Message Clock Out</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Hủy</string>
    <string name="dialog_confirm">Confirm to add Badge </string>
    <string name="tittle_dialog_confirm">Do you want to add this Badge to </string>


</resources>
