<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/app_toolbar"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_view_ac_clock">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn_app_check_in"
                android:text="@string/clock_in"
                android:textColor="@color/colorWhite" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_view_ac_clock"
                android:background="@drawable/selector_btn_app_green"
                android:text="@string/clock_out"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorWhiteBlue2"
        android:choiceMode="singleChoice"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="@android:color/transparent"
        android:orientation="vertical">

        <include layout="@layout/menu_top_navigation"></include>

        <TextView
            android:id="@+id/tvCheck"
            android:layout_marginLeft="@dimen/vertical_corner_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_view_nav_img"
            android:text="@string/nav_item_1"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_name_nav" />

        <View
            android:layout_marginTop="@dimen/corners_radius"
            android:layout_width="match_parent"
            android:background="@color/colorViewNav"
            android:layout_height="@dimen/nav_view"></View>

        <TextView
            android:id="@+id/tvBadge"
            android:layout_marginLeft="@dimen/vertical_corner_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_view_nav_img"
            android:text="@string/nav_item_2"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_name_nav" />

        <View
            android:layout_marginTop="@dimen/corners_radius"
            android:layout_width="match_parent"
            android:background="@color/colorViewNav"
            android:layout_height="@dimen/nav_view"></View>

        <TextView
            android:id="@+id/tvLogout"
            android:layout_marginLeft="@dimen/vertical_corner_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_view_nav_img"
            android:text="@string/nav_item_3"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_name_nav" />
        <View
            android:layout_marginTop="@dimen/corners_radius"
            android:layout_width="match_parent"
            android:background="@color/colorViewNav"
            android:layout_height="@dimen/nav_view"></View>

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>