<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/ac_toolbar_bagde"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhiteBlue2"
            android:orientation="vertical"
            android:paddingBottom="@dimen/corner_width"
            android:paddingLeft="@dimen/padding_view_ac_clock"
            android:paddingRight="@dimen/padding_view_ac_clock"
            android:paddingTop="@dimen/corner_width">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/size_ic_search_w"
                    android:layout_height="@dimen/size_ic_search_h"
                    android:layout_weight="1"
                    android:background="@drawable/ic_search" />

                <AutoCompleteTextView
                    android:background="@null"
                    android:id="@+id/edtSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="20"
                    android:hint="@string/search" />

            </LinearLayout>


        </LinearLayout>

        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:columnWidth="90dp"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp" />

    </LinearLayout><LinearLayout
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/colorWhiteBlue2"
    android:choiceMode="singleChoice"
    android:divider="@null"
    android:dividerHeight="0dp"
    android:listSelector="@android:color/transparent"
    android:orientation="vertical">

    <include layout="@layout/menu_top_navigation"></include>

    <TextView
        android:id="@+id/tvCheck"
        android:layout_marginLeft="@dimen/vertical_corner_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_view_nav_img"
        android:text="@string/nav_item_1"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_name_nav" />

    <View
        android:layout_marginTop="@dimen/corners_radius"
        android:layout_width="match_parent"
        android:background="@color/colorViewNav"
        android:layout_height="@dimen/nav_view"></View>

    <TextView
        android:id="@+id/tvBadge"
        android:layout_marginLeft="@dimen/vertical_corner_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_view_nav_img"
        android:text="@string/nav_item_2"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_name_nav" />

    <View
        android:layout_marginTop="@dimen/corners_radius"
        android:layout_width="match_parent"
        android:background="@color/colorViewNav"
        android:layout_height="@dimen/nav_view"></View>

    <TextView
        android:id="@+id/tvLogout"
        android:layout_marginLeft="@dimen/vertical_corner_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_view_nav_img"
        android:text="@string/nav_item_3"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_name_nav" />

    <View
        android:layout_marginTop="@dimen/corners_radius"
        android:layout_width="match_parent"
        android:background="@color/colorViewNav"
        android:layout_height="@dimen/nav_view"></View>
</LinearLayout>
</android.support.v4.widget.DrawerLayout>